proj1/tests/correct/comment.py
def g(n): return n

def f(n):

	# sdfkjn
	sd = 1
	# sdfkjn
	return \
 \
\
g(n - 
		1) + \
		 g(n - 
   		 		
			sd)

print f(3)
