proj1/tests/error/indents_error.py
def f(n):
  d = 2
    d = 4
